added navbar, rerouted cam button, and centered recycler view for book cards

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="username_holder">Kasani Tito</string>
     <string name="review_holder">We\'re sooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo back</string>
     <string name="likes_holder">67</string>
+    <string name="book_image" />
 
 </resources>
